########################################################################
# Add Subdirectories
########################################################################
add_subdirectory(${LIBCYBERRADIO_INC_SUBDIR}/Common)
add_subdirectory(${LIBCYBERRADIO_INC_SUBDIR}/NDR651)
add_subdirectory(${LIBCYBERRADIO_INC_SUBDIR}/ZeroCopy)