########################################################################
# Install Public Header Files
########################################################################
INSTALL(FILES
    ZeroCopySocket.hpp
    ThreadedZeroCopySocket.hpp
    DESTINATION ${LIBCYBERRADIO_INCLUDE_DIR}/ZeroCopy
)
